# cminus

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile
cminus/: CminusDriver.cc  CminusDriver.hh  CminusParser.y  CminusScanner.l
input/: 10.or.cm  11.eq.cm  12.lt.cm  13.gt.cm  14.bubble.cm  14.not.cm  15.log.cm  16.log.cm  17.mix.cm  2.if.cm  2.io.cm  20.stack-test.cm  21.fizzbuzz.cm  22.guess.cm  23.asm.cm  3.add.cm  4.if.cm  4.sub.cm  5.mul.cm  6.div.cm  7.arith.cm  8.arith.cm  9.and.cm  Makefile
parser/: CminusParser.y  CminusScanner.l  Makefile
src/: CminusDriver.cpp  CminusDriver.hpp  CminusParser.y  CminusParser.ypp  CminusScanner.hpp  CminusScanner.l  DriverState.hpp  main.cpp
src/asm/: ASM.cpp  ASM.hpp  Destination.cpp  Destination.hpp  Location.hpp  Register.cpp  Register.hpp  Source.cpp  Source.hpp
src/ast/: ASMASTNode.cpp  ASMASTNode.hpp  AST.hpp  ASTNode.cpp  ASTNode.hpp  BinaryOperationASTNode.cpp  BinaryOperationASTNode.hpp  ExpressionASTNode.cpp  ExpressionASTNode.hpp  ExpressionListASTNode.cpp  ExpressionListASTNode.hpp  ForStatementASTNode.cpp  ForStatementASTNode.hpp  FunctionCallASTNode.cpp  FunctionCallASTNode.hpp  FunctionDeclarationASTNode.cpp  FunctionDeclarationASTNode.hpp  GlobalStatementListASTNode.cpp  GlobalStatementListASTNode.hpp  IOStatement.cpp  IOStatement.hpp  IfStatementASTNode.cpp  IfStatementASTNode.hpp  LiteralASTNode.cpp  LiteralASTNode.hpp  MiscStatement.cpp  MiscStatement.hpp  StatementListASTNode.cpp  StatementListASTNode.hpp  UnaryOperationASTNode.cpp  UnaryOperationASTNode.hpp  VariableASTNode.cpp  VariableASTNode.hpp  VariableDeclarationASTNode.cpp  VariableDeclarationASTNode.hpp  WhileStatementASTNode.cpp  WhileStatementASTNode.hpp
src/state/: State.cpp  State.hpp
src/structures/: ASTNode.hpp  ASTNode_Check.cpp  ASTNode_Emit.cpp  ASTNode_constructors.cpp  ASTToken.cpp  ASTToken.hpp  SymbolTable.cpp  SymbolTable.hpp  TypeGraph.cpp  TypeGraph.hpp
test/: test.cpp  test.sh
tester/: test.sh
tests/: README.md  test
tests/12.gcd.cm/: some
tests/16.bubblerecur.cm/: mix
tests/18.mix.cm/: test3  test4  test5  test6  test7
util/: Makefile
